<resources>
    <string name="app_name">Mj App 3 TipCalculator</string>
    <string name="cost_of_service">Cost Of Service</string>
    <string name="how_was_the_service">How was the service ?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="amazing_15">Amazing (15%)</string>
    <string name="amazing_10">Amazing (10%)</string>
    <string name="round_up_tip">Round up tip ?</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="calculate">Calculate</string>
</resources>